--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,12 @@ server:
     include-binding-errors: always
 spring:
   datasource:
-    password: "adrian10jet"
-    url: "jdbc:mysql://mysql-koltrum.alwaysdata.net/koltrum_db?reconnect=true"
-    username: "koltrum"
-#    password:
-#    url: "jdbc:mysql://localhost:3306/koltrum_db?reconnect=true"
-#    username: root
+#    password: "adrian10jet"
+#    url: "jdbc:mysql://mysql-koltrum.alwaysdata.net/koltrum_db?reconnect=true"
+#    username: "koltrum"
+    password:
+    url: "jdbc:mysql://localhost:3306/koltrum_db?reconnect=true"
+    username: root
   jpa:
     hibernate:
       ddl-auto: update
